tests/neg-macros/i7407.scala
def qc(using ctx: scala.quoted.Quotes) = println(ctx)
inline def g = qc  // error: no implicit argument
